Menambahkan Header dan Footer

--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+
+    <head>Ini adalah Header</head>
+
     <h1>PT.ALIANSI NIJA KONOHA</h1>
 
-    <h2>PT ANAK DARI BUMN</h2>
+    <div>Ini adalah isi dari sebuah div</div>
+
+    <footer>Ini adalah footer</footer>
+
 </body>
 </html>
