--- a/contact-us.html
+++ b/contact-us.html
@@ -13,6 +13,8 @@
 
     <div>Ini adalah contact-us berisikan alamat Maps</div>
 
+    <div>Perubahan pada baris 16 di github. Contoh case conflig</div>
+
     <footer>Ini adalah footer</footer>
 
 </body>
